# controllers/users/getCurrentUser.js
@@ -1,11 +1,16 @@
 module.exports = async (req, res) => {
-  const { _id, username, balance, email } = req.user;
+  const { _id, avatarURL, username, email, birthday, phone, skype, token } =
+    req.user;
   res.status(200).json({
     data: {
       id: _id,
+      avatarURL,
       username,
       email,
-      balance,
+      birthday,
+      phone,
+      skype,
+      token,
     },
   });
 };
